- Suppression de l'utilisation des z-index. - Correction de la largeur de TarotCardComponent - Correction de l'interprétation des caractères HTML echappés pour le titre de la maison

--- a/src/app/birth-repository-house/birth-repository-house.component.css
+++ b/src/app/birth-repository-house/birth-repository-house.component.css
@@ -10,5 +10,4 @@ h3 {
 
 .repository-house {
 	margin-bottom: 10px;
-	z-index: 10;
 }
