--- a/src/app/birth-repository/birth-repository.component.css
+++ b/src/app/birth-repository/birth-repository.component.css
@@ -2,13 +2,11 @@
 	background-color: rgba(255, 255, 255, 0.3);
 	width: 100%; 
 	padding-top: 5%;
-	z-index: 10;
 }
 
 .repository-row {
 	display: inline-block;
 	width: 100%;
-	z-index: 10;
 	/* border: 1px solid green; */
 }
 
@@ -16,7 +14,6 @@
 	display: inline-block;
 	width: 15%;
 	margin: 10px;
-	z-index: 10;
 	border: 1px solid black;
 	transform: translate(-50%, 0);
 }
