--- a/src/app/referentiel.component.css
+++ b/src/app/referentiel.component.css
@@ -3,7 +3,6 @@ h1 {
 	left: 50%;
 	top: 1%;
 	transform: translate(-50%, 0);
-	z-index: 10;
 }
 
 #controls {
@@ -14,7 +13,6 @@ h1 {
 	padding: 0px 20px 20px 20px;
 	width: 18%;
 	opacity: 0.2;
-	z-index: 10;
 }
 
 #application {
@@ -22,7 +20,6 @@ h1 {
     background-repeat: no-repeat;
 	margin: 0;
 	padding: 0;
-	z-index: 1;
 }
 
 #card-presentation {
