--- a/src/app/tarot-card/tarot-card.component.css
+++ b/src/app/tarot-card/tarot-card.component.css
@@ -1,33 +1,31 @@
 .tarot-card {
-	transform: scale(1);
-	transition: 1s;
+	position: relative;
+	width: 80px;
+	margin: auto;
+	display: block;
+	transition-duration: 1s;
+	transition-property: transform;
 }
 
 .tarot-card.small {
-	position: relative;
-	display: block;
-	z-index: 10;
+	transform: scale(1);
 }
 
 .tarot-card.large {
 	background-color: rgba(255, 255, 255, 0.8);
 	transform: scale(3);
-	z-index: 20;
 }
 
 .tarot-card h2 {
+	position: relative;
 	font-size: 11px;
 	top: 0;
 	text-align: center;
 }
 
 .tarot-card img {
+	position: relative;
 	display: block;
 	margin: auto;
 	height: 80px;
-	z-index: 10;
-}
-
-.tarot-card.large img {
-	z-index: 20;
 }
